--- a/Cuda Game Engine/Cuda Game Engine.vcxproj
+++ b/Cuda Game Engine/Cuda Game Engine.vcxproj
@@ -156,55 +156,49 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <CudaCompile Include="CudaGLBuffer.cu" />
-    <CudaCompile Include="simpleGL.cu" />
+    <CudaCompile Include="GeometryManager.cu" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BufferManager.cpp" />
-    <ClCompile Include="CenteredXmlVisitor.cpp" />
-    <ClCompile Include="CompositeGrid.cpp" />
-    <ClCompile Include="CompressedTexture.cpp" />
+    <ClCompile Include="Camera.cpp" />
     <ClCompile Include="FrameBufferTexture.cpp" />
     <ClCompile Include="GlobalXmlVisitor.cpp" />
     <ClCompile Include="Main.cpp" />
-    <ClCompile Include="MipmappedTexture.cpp" />
-    <ClCompile Include="ObjectState.cpp" />
+    <ClCompile Include="Node.cpp" />
     <ClCompile Include="ObjFileReader.cpp" />
     <ClCompile Include="RenderTarget.cpp" />
     <ClCompile Include="ResourceHandler.cpp" />
     <ClCompile Include="ScenarioException.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="ShaderParameter.cpp" />
-    <ClCompile Include="TestEngine.cpp" />
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="Texture3D.cpp" />
     <ClCompile Include="TransformFeedbackBuffer.cpp" />
     <ClCompile Include="TriangleMesh.cpp" />
     <ClCompile Include="UniformBlock.cpp" />
+    <ClCompile Include="vec3.cpp" />
     <ClCompile Include="Visitor.cpp" />
     <ClCompile Include="WorldState.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BufferManager.h" />
-    <ClInclude Include="CenteredXmlVisitor.h" />
-    <ClInclude Include="CompositeGrid.h" />
-    <ClInclude Include="CompressedTexture.h" />
+    <ClInclude Include="Camera.h" />
     <ClInclude Include="FrameBufferTexture.h" />
     <ClInclude Include="GlobalXmlVisitor.h" />
-    <ClInclude Include="MipmappedTexture.h" />
-    <ClInclude Include="ObjectState.h" />
+    <ClInclude Include="Node Visitor Header.h" />
+    <ClInclude Include="Node.h" />
     <ClInclude Include="ObjFileReader.h" />
     <ClInclude Include="RenderTarget.h" />
     <ClInclude Include="ResourceHandler.h" />
     <ClInclude Include="ScenarioException.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="ShaderParameter.h" />
-    <ClInclude Include="TestEngine.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="Texture3D.h" />
     <ClInclude Include="TransformFeedbackBuffer.h" />
     <ClInclude Include="TriangleMesh.h" />
     <ClInclude Include="UniformBlock.h" />
+    <ClInclude Include="vec3.hpp" />
     <ClInclude Include="Visitor.h" />
     <ClInclude Include="WorldState.h" />
   </ItemGroup>
@@ -215,13 +209,31 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <Xml Include="..\Test Files\XML Scenarios\Scene Input1.xml">
       <SubType>Designer</SubType>
     </Xml>
+    <Xml Include="..\Test Files\XML Scenarios\Scene Input2.xml">
+      <SubType>Designer</SubType>
+    </Xml>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\Test Files\Shader Programs\Fragment Shader.glsl" />
     <None Include="..\Test Files\Shader Programs\FS Grid Shader.glsl" />
     <None Include="..\Test Files\Shader Programs\Vertex Shader.glsl" />
     <None Include="..\Test Files\Shader Programs\VS Grid Shader.glsl" />
-    <None Include="CudaGLBuffer.cuh" />
+    <None Include="GeometryManager.cuh" />
+  </ItemGroup>
+  <ItemGroup>
+    <Object Include="..\Test Files\Meshes\cube.obj">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </Object>
+    <Object Include="..\Test Files\Meshes\Ocean.obj">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </Object>
+    <Object Include="..\Test Files\Meshes\sibenik.obj">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </Object>
+    <Object Include="..\Test Files\Meshes\Texture_Face.obj">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+      <SubType>Designer</SubType>
+    </Object>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
